@@ -16,6 +16,7 @@
 [fix] language setting
 [fix] show vodcasts in Following Live Channels
 [fix] logging in Kodi 19
+[upd] frame rate limiting to allow for 60 fps limit
 [lang] fr_FR |contrib: alan7000|
         </news>
         <assets>
